# fastapi-sqlmodel

./: .env.example  .gitignore  Dockerfile  docker-compose.dev.yml  pyproject.toml
api/: __init__.py
api/core/: app.py  config.py
api/models/: __init__.py  author.py
api/repositories/: author.py  base.py
api/router/: __init__.py
api/router/v1/: __init__.py  author.py
api/services/: author.py  base.py
api/utils/: http_error.py
app/: __init__.py
app/api/: __init__.py
app/api/v1/: author.py
app/core/: app.py  config.py
app/models/: __init__.py  author.py
app/repositories/: author.py  author_repository.py  base.py  base_repository.py
app/services/: author.py  author_service.py  base.py  base_service.py
app/utils/: validation_error.py
scripts/: run
