[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["jakee <jakee_ind@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
sqlmodel = "^0.0.14"
loguru = "^0.7.2"
psycopg2 = "^2.9.9"
pydantic-settings = "2.0.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
