[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["jakee <jakee_ind@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
sqlmodel = "^0.0.14"
loguru = "^0.7.2"
psycopg2 = "^2.9.9"
pydantic-settings = "2.0.3"
fastapi-pagination = "^0.12.14"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E501"]
ignore = ["F403"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
